Чуть-чуть исправил табуляцию

--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="D:\Projects\ToDoList\style\style.css">
-        <link rel="icon" href="things/favicon.ico" type="image/x-icon">
-        <title>ToDo List</title>
-    </head>
-    <body>
-        <div class="todoHeading">
-                <h1>ToDo List</h1>
+<head>
+    <link rel="stylesheet" href="D:\Projects\ToDoList\style\style.css">
+    <link rel="icon" href="things/favicon.ico" type="image/x-icon">
+    <title>ToDo List</title>
+</head>
+<body>
+    <div class="todoHeading">
+        <h1>ToDo List</h1>
+    </div>
+<div class="todoList">
+    <div class="todoAdd">
+        <div class="todoAddTextField">
+            <input type="text" class="newNote" placeholder="Введите новую задачу">
+            <button class="add">Добавить</button>
         </div>
-<div class="todoList"
-        <div class="todoAdd">
-            <div class="todoAddTextField">
-                <input type="text" class="newNote" placeholder="Введите новую задачу">
-                <button class="add">Добавить</button>
-          </div>
         <div class="wrapper">
             <ul class="todo">
                 
@@ -31,6 +31,8 @@
         </ul>
     </div>
 </footer>
-        <script src="script/script.js"></script>
-    </body>
+
+    <script src="script/script.js"></script>
+
+</body>
 </html>
